@@ -16,4 +16,6 @@ PPB - sensmodel changed to allow user-defined ocular media transmission
 2012-12-18
 RM - Updated sensitivity curves
 RM - added scale parameter to vismodel (can now implement photon catch noise)
-RM - changed how vismodel handles von Kries correction - now an option, to allow receptor noise color PPB - summary.rspec does not take any arguments and returns NAs for positive bmaxnegs and others
+RM - changed how vismodel handles von Kries correction - now an option, to allow receptor noise model
+RM - passed changes to vismodel to how coldist handles them. Now ready for receptor noise model
+PPB - summary.rspec does not take any arguments and returns NAs for positive bmaxnegs and others
